@@ -51,7 +51,11 @@
 
 #  Configure msvc (default version, searched in standard location
 #  and PATH).
-#  using msvc ;
+using msvc : 8.0 : ;
+
+# using python : 2.4 : "C:/Program Files/Python24/python.exe" : "C:/Program Files/Python24/include/" ;
+
+using python ;
 
 #  Borland configuration
 #  using borland ;
